--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,128 @@
-.App {
+html {
+  height: 100%;
+  display: table;
+  margin: auto;
+}
+
+body {
+  height: 100%;
+  display: table-cell;
+  vertical-align: middle;
+  background: grey;
+}
+
+ul {
+  list-style: none;
+}
+
+.podcast-container {
+  display: flex;
+  justify-content: center;
+  height: 80%;
+}
+
+.list-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.left-list-container  .right-list-container {
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
+}
+
+.podcast-row {
+  background: white;
+  border: 2px solid black;
+  margin: 20px;
+  padding-bottom: 1px;
+}
+
+.podcast-image {
+  object-fit: fill;
+  height: 100%;
+  width: 110px;
+  padding-right: 5px;
+  background-size: cover;
+}
+
+.podcast-title {
+  font-size: 14px;
+  margin: 1px;
+}
+
+.podcast-name {
+  font-size: 13px;
+  margin: 0px;
+  padding: 2px;
+}
+
+.podcast-details {
+  font-size: 10px;
+  display: flex;
+  padding: 0px 3px 1px;
+}
+
+.podcast-description {
+  font-size: 10px;
+  display: flex;
+  margin: 0px;
+  padding-bottom: 5px;
+}
+
+.podcast-player {
+  background: white;
+  border: 1px solid lighten(#acacac, 20%);
+  width: 50vw;
   text-align: center;
+  display: flex;
+  flex-flow: row;
+  margin: 4rem 0 4rem 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.audio-controls {
+  align-items: center;
+  justify-content: center;
+  margin-top: 2.5rem;
+  flex: 3;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+.player-button {
+  font-size: 30px;
+  border-radius: 10px;
+}
+
+.left-list, .right-list {
+  height: 100%;
+  background: grey;
+  padding: 20px;
+  margin: 10px;
+  width: 525px;
+  min-height: 500px;
+}
+
+/* .App {
+  text-align: center;
+} */
+
+
+
+.podcast-row {
+  /* grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-areas: 
+  "img title controls"
+  "img name controls"
+  "img description controls"
+  ; */
+}
+
+
+
+
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-float infinite 3s ease-in-out;
   }
@@ -20,20 +135,4 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-}
-
-.App-link {
-  color: rgb(112, 76, 182);
-}
-
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px)
-  }
-  100% {
-    transform: translateY(0px)
-  }
-}
+} */
