--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
   height: 100%;
   display: table-cell;
   vertical-align: middle;
-  background: white;
+  background: black;
 }
 
 ul {
@@ -17,13 +17,22 @@ ul {
 
 h1 {
   text-align: center;
+  font-size: 50px;
+  color: white;
+}
+
+#instructions {
+  color: white;
+  text-align: center;
+  margin-left: 25%;
+  width: 50%
 }
 
 .podcast-container {
   display: flex;
   justify-content: center;
   height: 50%;
-  background: white;
+  background: black;
 }
 
 .list-container {
@@ -36,7 +45,6 @@ h1 {
   display: flex; 
   justify-content: center; 
   align-items: center;
- 
 }
 
 .podcast-row {
@@ -79,16 +87,6 @@ h1 {
   width: 100%;
 }
 
-.podcast-player {
-  background: white;
-  border: 1px solid lighten(#acacac, 20%);
-  width: 50vw;
-  text-align: center;
-  display: flex;
-  flex-flow: row;
-  margin: 4rem 0 4rem 0;
-}
-
 .audio-controls {
   align-items: center;
   justify-content: center;
@@ -98,7 +96,8 @@ h1 {
 
 .player-button {
   font-size: 30px;
-  border-radius: 10px;
+  border-radius: 25px;
+  background: white;
 }
 
 .audio-player {
@@ -115,36 +114,3 @@ h1 {
   border: 5px dashed black;
 }
 
-/* .App {
-  text-align: center;
-} */
-
-
-
-.podcast-row {
-  /* grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-template-areas: 
-  "img title controls"
-  "img name controls"
-  "img description controls"
-  ; */
-}
-
-
-
-
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
-}
-
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-} */
